<resources>
    <string name="app_name">EWallet Test</string>

    <!-- Message popup title & content -->
    <string name="message_popup_confirm_title">Xác nhận</string>
    <string name="message_popup_cancel_title">Hủy</string>
    <string name="message_popup_no_title">Không</string>
    <string name="message_popup_ok_title">OK</string>
    <string name="message_popup_error_title">Lỗi</string>
    <string name="message_popup_inform_title">Thông báo</string>
    <string name="message_popup_fail_title">Thất bại</string>
    <string name="message_popup_success_title">Thành công</string>

    <!-- Server error message -->
    <string name="server_no_data_error">Hệ thống chưa cập nhật dữ liệu</string>
    <string name="server_no_internet_error">Vui lòng kiểm tra kết nối mạng</string>
    <string name="server_page_not_found_error">Không tìm thấy dữ liệu</string>
    <string name="server_bad_request_error">Dữ liệu lỗi, vui lòng thử lại</string>
    <string name="server_failed_error">Lỗi hệ thống</string>
    <string name="server_unknown_error">Xảy ra lỗi, vui lòng thử lại</string>

    <!-- Phone screen -->
    <string name="phone_screen_title">Nạp tiền điện thoại</string>
    <string name="phone_screen_subtitle">Nhập số điện thoại</string>
    <string name="phone_screen_phone_number_title">Số điện thoại</string>
    <string name="phone_screen_enter_phone_number_hint">Nhập số điện thoại</string>
    <string name="phone_screen_card_price_title">Mệnh giá thẻ</string>
    <string name="phone_screen_continue_title">Tiếp tục</string>

    <!-- Payment screen -->
    <string name="payment_screen_title">Phương thức thanh toán</string>
    <string name="payment_screen_subtitle">Chọn phương thức thanh toán</string>
    <string name="payment_screen_payment_method_title">Phương thức thanh toán</string>
    <string name="payment_screen_continue_title">Tiếp tục</string>
    <string name="payment_screen_back_title">Trở về</string>
    <string name="payment_screen_linked_account_title">Linked account</string>
    <string name="payment_screen_international_card_title">International card</string>
    <string name="payment_screen_domestic_card_title">Domestic card</string>
    <string name="payment_screen_e_wallet_title">eWallet</string>
    <string-array name="payment_methods">
        <item>@string/payment_screen_linked_account_title</item>
        <item>@string/payment_screen_international_card_title</item>
        <item>@string/payment_screen_domestic_card_title</item>
        <item>@string/payment_screen_e_wallet_title</item>
    </string-array>

    <!-- Confirmation screen -->
    <string name="confirmation_screen_title">Xác nhận thông tin</string>
    <string name="confirmation_screen_subtitle">Kiểm tra lại thông tin đã chọn</string>
    <string name="confirmation_screen_information_title">Thông tin chi tiết</string>

    <string name="confirmation_screen_phone_info_title">Số điện thoại:</string>
    <string name="confirmation_screen_card_info_title">Mệnh giá thẻ cào:</string>
    <string name="confirmation_screen_payment_method_info_title">Phương thức thanh toán:</string>
    <string name="confirmation_screen_total_amount_info_title">Tổng tiền:</string>
    <string name="confirmation_screen_pay_title">Thanh toán</string>
    <string name="confirmation_screen_otp_title">Xác nhận OTP</string>
    <string name="confirmation_screen_otp_hint_title">Vui lòng nhập mã OTP</string>
    <string name="confirmation_screen_confirm_title">Xác nhận</string>
    <string name="confirmation_screen_create_payment_successful">Thanh toán thành công</string>
    <string name="confirmation_screen_create_payment_failed">Thanh toán thất bại</string>
    <string name="confirmation_screen_otp_required">Chưa nhập mã OTP</string>


</resources>
