<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.winsonmac.ewallettest.controllers.payment.PaymentViewModel"/>

        <variable
                name="handler"
                type="com.winsonmac.ewallettest.controllers.payment.PaymentEventHandler"/>
    </data>

    <RelativeLayout
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            tools:context=".controllers.payment.PaymentActivity">

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/tvMethodTitle"
                  android:layout_below="@id/phonePanel"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/text_size_14"
                  android:textAllCaps="true"
                  android:layout_marginStart="@dimen/_10sdp"
                  android:text="@string/payment_screen_payment_method_title"/>

        <android.support.v7.widget.CardView
                android:id="@+id/methodZone"
                android:layout_width="match_parent"
                android:layout_below="@id/tvMethodTitle"
                android:layout_marginTop="@dimen/_10sdp"
                app:contentPadding="@dimen/_10sdp"
                android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:gridLayoutManager="@{1}"
                    app:adapter="@{viewModel.mPaymentAdapter}"/>

        </android.support.v7.widget.CardView>

        <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/methodZone"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/button_positive_click_state"
                android:textColor="@color/color_white"
                android:textAllCaps="true"
                android:stateListAnimator="@null"
                android:text="@string/payment_screen_continue_title"
                android:enabled="@{viewModel.isInfoValid}"
                android:onClick="@{(v)->handler.onNextClick()}"
                tools:text="CONTINUE"/>

        <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnContinue"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/button_negative_click_state"
                android:textColor="@color/color_white"
                android:textAllCaps="true"
                android:stateListAnimator="@null"
                android:text="@string/payment_screen_back_title"
                android:onClick="@{(v)->handler.onBackClick()}"
                tools:text="BACK"/>
    </RelativeLayout>
</layout>