<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.winsonmac.ewallettest.controllers.phone.PhoneViewModel"/>
        <variable name="handler"
                  type="com.winsonmac.ewallettest.controllers.phone.PhoneEventHandler"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:background="@color/color_light_gray"
            android:layout_height="match_parent">

        <RelativeLayout
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                tools:context=".controllers.phone.PhoneActivity">

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tvEnterPhoneTitle"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/text_size_14"
                      android:textAllCaps="true"
                      android:layout_marginStart="@dimen/_10sdp"
                      android:text="@string/phone_screen_phone_number_title"/>

            <android.support.v7.widget.CardView
                    android:id="@+id/phonePanel"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@id/tvEnterPhoneTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="@dimen/_10sdp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/edtPhone"
                            android:layout_width="match_parent"
                            android:layout_centerVertical="true"
                            android:inputType="number"
                            android:text="@={viewModel.mPhone}"
                            android:layout_toStartOf="@id/btnContact"
                            android:imeOptions="actionDone"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_14"
                            android:hint="@string/phone_screen_enter_phone_number_hint"/>


                    <ImageView
                            android:id="@+id/btnContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_centerVertical="true"
                            android:onClick="@{(v)->handler.onContactClick()}"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignBottom="@id/edtPhone"
                            android:background="@drawable/button_contact_state"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tvCardPrice"
                      android:layout_below="@id/phonePanel"
                      android:layout_marginTop="@dimen/_20sdp"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/text_size_14"
                      android:textAllCaps="true"
                      android:layout_marginStart="@dimen/_10sdp"
                      android:text="@string/phone_screen_card_price_title"/>

            <android.support.v7.widget.CardView
                    android:id="@+id/cardZone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvCardPrice"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:contentPadding="@dimen/_10sdp">

                <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:nestedScrollingEnabled="false"
                        app:gridLayoutManager="@{3}"
                        app:adapter="@{viewModel.mCardAdapter}"/>

            </android.support.v7.widget.CardView>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardZone"
                    android:padding="@dimen/_15sdp"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/button_positive_click_state"
                    android:textColor="@color/color_white"
                    android:textAllCaps="true"
                    android:stateListAnimator="@null"
                    android:onClick="@{(v)->handler.onNextClick()}"
                    android:enabled="@{viewModel.isInfoValid}"
                    android:text="@string/phone_screen_continue_title"
                    tools:text="CONTINUE"/>
        </RelativeLayout>
    </ScrollView>
</layout>