<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.winsonmac.ewallettest.controllers.confirmation.ConfirmationViewModel"/>

        <variable
                name="handler"
                type="com.winsonmac.ewallettest.controllers.confirmation.ConfirmationEventHandler"/>
    </data>

    <RelativeLayout
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            tools:context=".controllers.payment.PaymentActivity">

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/tvInformation"
                  android:layout_below="@id/phonePanel"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/text_size_14"
                  android:textAllCaps="true"
                  android:layout_marginStart="@dimen/_10sdp"
                  android:text="@string/confirmation_screen_information_title"/>

        <android.support.v7.widget.CardView
                android:id="@+id/informationZone"
                android:layout_width="match_parent"
                android:layout_below="@id/tvInformation"
                android:layout_marginTop="@dimen/_10sdp"
                app:contentPadding="@dimen/_10sdp"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <include layout="@layout/layout_single_information"
                         app:label="@{@string/confirmation_screen_phone_info_title}"
                         app:description="@{viewModel.mPhoneNumber}"/>

                <include layout="@layout/layout_single_information"
                         app:label="@{@string/confirmation_screen_card_info_title}"
                         app:description="@{viewModel.mCardInfo.price}"/>

                <include layout="@layout/layout_single_information"
                         app:label="@{@string/confirmation_screen_payment_method_info_title}"
                         app:description="@{viewModel.mPaymentMethod.mTitle}"/>

                <View android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:layout_marginBottom="@dimen/_10sdp"
                      android:background="@color/color_dark_gray"/>

                <include layout="@layout/layout_single_information"
                         app:horizontal="@{true}"
                         app:label="@{@string/confirmation_screen_total_amount_info_title}"
                         app:description="@{viewModel.mTotalAmount}"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
                android:id="@+id/btnPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/informationZone"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/button_positive_click_state"
                android:textColor="@color/color_white"
                android:textAllCaps="true"
                android:stateListAnimator="@null"
                android:text="@string/confirmation_screen_pay_title"
                android:onClick="@{(v)->handler.onPayClick()}"
                tools:text="PAY"/>

        <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnPay"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/button_negative_click_state"
                android:textColor="@color/color_white"
                android:textAllCaps="true"
                android:stateListAnimator="@null"
                android:text="@string/payment_screen_back_title"
                android:onClick="@{(v)->handler.onBackClick()}"
                tools:text="BACK"/>
    </RelativeLayout>
</layout>